--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             ></a>
           </div>
           <button class="city" type="submit">
-            <i></i>
+            <i class="fa fa-location-arrow"></i>
             <span>Алтайский край</span>
           </button>
           <div class="search_wrap">
@@ -88,13 +88,13 @@
             />
           </div>
           <div class="favorites">
-            <i class="fa-duotone fa-heart"></i>
+            <i class="fa fa-heart"></i>
             0
           </div>
-          <div class="profile">
+          <a class="profile" href="">
             <span>Екатерина</span>
             <span class="profile_img"></span>
-          </div>
+          </a>
         </div>
         <nav class="nav_menu_wrap">
           <ul id="navigation"></ul>
