--- a/index.html
+++ b/index.html
@@ -101,7 +101,14 @@
         </nav>
       </header>
     </div>
+
+    <div class="drop_down_menu">
+      <input type="text" class="city_search" />
+      <span class="cities-bages"></span>
+      <div class="regions"></div>
+      <button class="save_button">Сохранить</button>
+    </div>
+
     <script type="module" src="/main.js"></script>
-    ;
   </body>
 </html>
