Add input search for dropDown

--- a/index.html
+++ b/index.html
@@ -103,7 +103,13 @@
     </div>
 
     <div class="drop_down_menu">
-      <input type="text" class="city_search" />
+      <div class="city_search_wrap">
+        <input
+          type="text"
+          class="city_search"
+          placeholder="Регион, город, населнный пункт"
+        />
+      </div>
       <span class="cities-bages"></span>
       <div class="regions"></div>
       <button class="save_button">Сохранить</button>
