Add js for add bage

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           placeholder="Регион, город, населнный пункт"
         />
       </div>
-      <span class="cities-bages"></span>
+      <div class="cities-bages"></div>
       <div class="regions"></div>
       <button class="save_button">Сохранить</button>
     </div>
