Fix open close drop down

--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
             ></a>
           </div>
           <div class="city_menu_wrap">
-            <button class="city" type="submit">
+            <button class="city" type="button">
               <i class="fa fa-location-arrow"></i>
               <span>Алтайский край</span>
             </button>
-            <div class="drop_down_menu">
+            <div class="drop_down_close drop_down_menu">
               <div class="city_search_wrap">
                 <input
                   type="text"
