Add focus for cities search

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
               <i class="fa fa-location-arrow"></i>
               <span>Алтайский край</span>
             </button>
-            <div class="drop_down_open drop_down_menu">
+            <div class="drop_down_close drop_down_menu">
               <div class="city_search_wrap">
                 <input
                   type="text"
