Add burger menu

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <div id="app">
       <header class="header">
         <div class="info_wrap">
+          <button class="burger_menu" type="button">
+            <i class="burger_menu_bars" aria-hidden="true"></i>
+          </button>
           <div class="logo">
             <a href="/"
               ><svg
