add close btn for search

--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
                   class="city_search"
                   placeholder="Регион, город, населнный пункт"
                 />
+                <i
+                  class="fa-sharp fa-solid fa-xmark reset_btn close_reset_btn"
+                ></i>
               </div>
               <div class="cities-bages"></div>
               <div class="regions"></div>
