Add logic for submitButton

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <div class="city_menu_wrap">
             <button class="city" type="button">
               <i class="fa fa-location-arrow"></i>
-              <span>Любой регион</span>
+              <span class="filter_button_name">Любой регион</span>
             </button>
             <div class="drop_down_close drop_down_menu">
               <div class="city_search_wrap">
