--- a/index.html
+++ b/index.html
@@ -122,6 +122,6 @@
       </header>
     </div>
 
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="./js/main.js"></script>
   </body>
 </html>
